// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component Should render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ededed",
      "borderBottomLeftRadius": 0,
      "borderBottomRightRadius": 0,
      "height": 160.07999999999998,
      "paddingHorizontal": 10,
      "paddingTop": 0,
      "width": "100%",
      "zIndex": 160,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`Header component Should render child 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ededed",
      "borderBottomLeftRadius": 0,
      "borderBottomRightRadius": 0,
      "height": 160.07999999999998,
      "paddingHorizontal": 10,
      "paddingTop": 0,
      "width": "100%",
      "zIndex": 160,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <Text>
      A
    </Text>
  </View>
</View>
`;

exports[`Header component Should render fixed 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ededed",
      "borderBottomLeftRadius": 0,
      "borderBottomRightRadius": 0,
      "elevation": 7,
      "height": 160.07999999999998,
      "left": 0,
      "paddingHorizontal": 10,
      "paddingTop": 0,
      "position": "absolute",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 3,
        "width": 0,
      },
      "shadowOpacity": 0.29,
      "shadowRadius": 4.65,
      "top": 0,
      "width": "100%",
      "zIndex": 160,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`Header component Should render multiple childs 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ededed",
      "borderBottomLeftRadius": 0,
      "borderBottomRightRadius": 0,
      "height": 160.07999999999998,
      "paddingHorizontal": 10,
      "paddingTop": 0,
      "width": "100%",
      "zIndex": 160,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <Text>
      A
    </Text>
    <Text>
      B
    </Text>
  </View>
</View>
`;

exports[`Header component Should render rounded borders 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ededed",
      "borderBottomLeftRadius": 20,
      "borderBottomRightRadius": 20,
      "height": 160.07999999999998,
      "paddingHorizontal": 10,
      "paddingTop": 0,
      "width": "100%",
      "zIndex": 160,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`Header component Should render with new backround color 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#313131",
      "borderBottomLeftRadius": 20,
      "borderBottomRightRadius": 20,
      "height": 160.07999999999998,
      "paddingHorizontal": 10,
      "paddingTop": 0,
      "width": "100%",
      "zIndex": 160,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`Header component Should render with shadow 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ededed",
      "borderBottomLeftRadius": 0,
      "borderBottomRightRadius": 0,
      "elevation": 7,
      "height": 160.07999999999998,
      "paddingHorizontal": 10,
      "paddingTop": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 3,
        "width": 0,
      },
      "shadowOpacity": 0.29,
      "shadowRadius": 4.65,
      "width": "100%",
      "zIndex": 160,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`Header component Should render with style 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ededed",
      "borderBottomLeftRadius": 0,
      "borderBottomRightRadius": 0,
      "height": 160.07999999999998,
      "paddingHorizontal": 10,
      "paddingTop": 0,
      "width": "80%",
      "zIndex": 160,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  />
</View>
`;
